# dynomite

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aliases.js  crates.js  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
dynomite/: .Cargo.toml.swp  Cargo.toml  all.html  index.html  macro.attr_map!.html  macro.attr_map.html  sidebar-items.js  trait.Attribute.html  trait.DynamoDbExt.html  trait.FromAttributes.html  trait.IntoAttributes.html  trait.Item.html  type.Attributes.html
dynomite-derive/: Cargo.toml
dynomite-derive/examples/: demo.rs  local.rs
dynomite-derive/src/: attr.rs  lib.rs
dynomite-derive/tests/: derived.rs
dynomite/error/: enum.AttributeError.html  index.html  sidebar-items.js
dynomite/examples/: demo.rs  lambda.rs  local.rs  stack.cf.yml
dynomite/ext/: trait.DynamoDbExt.html
dynomite/retry/: enum.Policy.html  index.html  sidebar-items.js  struct.RetryingDynamoDb.html  trait.Retries.html
dynomite/src/: .lib.rs.swp  error.rs  ext.rs  lib.rs  retry.rs
dynomite/tests/: derived.rs  try_build_test.rs
dynomite/tests/integration/: derive_conflict.rs  derived.rs  main.rs  skip_serializing_if.rs
dynomite/trybuild-tests/: dynomite-unknown-attr.rs  dynomite-unknown-attr.stderr  item-has-multiple-partition-keys.stderr  item-has-no-partition-key.rs  item-has-no-partition-key.stderr  item-not-on-struct-fail.stderr  readme.md
dynomite/trybuild-tests/fail/: attributes-derived-unamed-fields-struct.rs  attributes-derived-unamed-fields-struct.stderr  default-with-flatten.rs  default-with-flatten.stderr  excess-values-attr.rs  excess-values-attr.stderr  fat-enum-without-tag.rs  fat-enum-without-tag.stderr  incorrect-fn-path-in-skip-serializing-if.rs  incorrect-fn-path-in-skip-serializing-if.stderr  item-derived-unamed-field-struct.rs  item-derived-unamed-field-struct.stderr  item-has-multiple-partition-keys.rs  item-not-on-struct-fail.rs  item-not-on-struct-fail.stderr  no-attr-value.rs  no-attr-value.stderr  non-unique-fat-enum-tags.rs  non-unique-fat-enum-tags.stderr
dynomite/trybuild-tests/pass/: result-conflict.rs
dynomite_derive/: all.html  derive.Attribute.html  derive.Attributes.html  derive.Item.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/dynomite/: trait.DynamoDbExt.js  trait.IntoAttributes.js
implementors/failure/: trait.Fail.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/dynomite/: error.rs.html  ext.rs.html  lib.rs.html  retry.rs.html
src/dynomite_derive/: attr.rs.html  lib.rs.html
