[package]
name = "dynomite-derive"
version = "0.2.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Derives AWS DynamoDB dynomite types from native Rust struct types"
license = "MIT"
keywords = ["dynamodb", "rusoto"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite-derive"
homepage = "https://github.com/softprops/dynomite"
repository = "https://github.com/softprops/dynomite"
edition = "2018"

[badges]
coveralls = { repository = "softprops/dynomite" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "softprops/dynomite" }

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
syn = "0.15.22"
proc-macro2 = "0.4"