[package]
name = "dynomite-derive"
version = "0.8.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Derives AWS DynamoDB dynomite types from native Rust struct types"
license = "MIT"
keywords = ["dynamodb", "rusoto", "rusoto_dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite-derive"
homepage = "https://github.com/softprops/dynomite"
repository = "https://github.com/softprops/dynomite"
edition = "2018"

[badges]
coveralls = { repository = "softprops/dynomite" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "softprops/dynomite" }

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = "^1.0"
proc-macro2 = "^1.0"