[package]
name = "dynomite"
version = "0.8.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Provides set of high-level productive DynamoDB interfaces"
license = "MIT"
keywords = ["dynamodb", "rusoto", "rusoto_dynamodb"]
readme = "../README.md"
documentation = "https://docs.rs/dynomite"
homepage = "https://github.com/softprops/dynomite"
repository = "https://github.com/softprops/dynomite"
edition = "2018"
categories = ["database"]

[badges]
coveralls = { repository = "softprops/dynomite" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "softprops/dynomite" }

[dependencies]
async-trait = "0.1"
again = "0.1"
bytes = "0.5"
dynomite-derive = { version = "0.8.0", path = "../dynomite-derive", optional = true }
futures = "0.3"
log = "0.4"
rusoto_core_default = { package = "rusoto_core", version = "0.43", optional = true }
rusoto_core_rustls = { package = "rusoto_core", version = "0.43", default_features = false, features=["rustls"], optional = true }
rusoto_dynamodb_default = { package = "rusoto_dynamodb", version = "0.43", optional = true }
rusoto_dynamodb_rustls = { package = "rusoto_dynamodb", version = "0.43", default_features = false, features=["rustls"], optional = true }
uuid = { version = "0.8", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }


[dev-dependencies]
env_logger = "0.7"
maplit = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }

[features]
default = ["uuid", "chrono", "derive", "rusoto_core_default", "rusoto_dynamodb_default"]
rustls = ["uuid", "chrono", "derive", "rusoto_core_rustls", "rusoto_dynamodb_rustls"]
derive = ["dynomite-derive"]
